--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             det gælder
             computere og computerudstyr.</p>
 
-        <img src="imgs/computer-cutout.webp" alt="computer cutout">
+        <img src="imgs/computer-cutout.webp" alt="computer-cutout">
         <h2>Computere i hjemmet</h2>
         <p>Ni ud af ti familier ejer i 2022 en eller flere smartphones, mens knap seks ud af ti
             familier har en
@@ -52,7 +52,7 @@
         <dt>Smartphone</dt>
         <dd>93%</dd>
     </dl>
-    <img src="imgs/computer-old.webp" alt="computer old">
+    <img src="imgs/computer-old.webp" alt="computer-old">
     </main>
     <footer>
         Lavet af Sophus Haff
