--- a/galleri.html
+++ b/galleri.html
@@ -25,10 +25,10 @@
     <main>
         <h2></h2>
         <p></p>
-        <img src="imgs/galleri/apple-84.webp" alt="apple">
+        <img src="imgs/galleri/apple-84.webp" alt="apple-84">
         <img src="imgs/galleri/code.webp" alt="code">
-        <img src="imgs/galleri/desktop-setup.webp" alt="desktop setup">
-        <img src="imgs/galleri/intel-chip.webp" alt="intel chip">
+        <img src="imgs/galleri/desktop-setup.webp" alt="desktop-setup">
+        <img src="imgs/galleri/intel-chip.webp" alt="intel-chip">
         <img src="imgs/galleri/keyboard.webp" alt="keyboard">
         <img src="imgs/galleri/macbook.webp" alt="macbook">
     </main>
