--- a/komponenter.html
+++ b/komponenter.html
@@ -57,12 +57,12 @@
             futuristisk,
             så skyldes det selvfølgelig, at det kræver pumper, rør og andet udstyr at få væsken rundt.</p>
         <img src="imgs/komponenter/vand.webp" alt="vand">
-        <img src="imgs/komponenter/motherboard1.webp" alt="motherboard">
+        <img src="imgs/komponenter/motherboard1.webp" alt="motherboard1">
         <h2>Motherboard</h2>
         <p>Bundkortet er "pladen", du sætter din CPU, din GPU og dine RAM fast i. Det er på den måde ret afgørende, at
             dit
             motherboard dvs. dit bundkort passer til resten af din hardware. Ellers bliver det en "flaskehals".</p>
-        <img src="imgs/komponenter/motherboard2.webp" alt="motherboard">
+        <img src="imgs/komponenter/motherboard2.webp" alt="motherboard2">
     </main>
     <footer>
         Lavet af Sophus Haff
